--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "nwitter",
-  "description": "A twitter clone written with Node.js, Express, and MongoDB",
-  "version": "2.1.0",
-  "repository": "https://github.com/vinitkumar/node-twitter",
-  "private": false,
-  "author": "Vinit Kumar <vinit1414.08@bitmesra.ac.in> (http://vinitkumar.me)",
+  "name": "socialnetwork",
+  "description": "",
+  "version": "1.0.2",
+  "repository": "",
+  "private": true,
+  "author": "",
   "scripts": {
     "start": "nodemon server.js",
     "test": "make test",
@@ -18,7 +18,6 @@
     "async": "latest",
     "bcrypt": "^3.0.4",
     "body-parser": "^1.18.1",
-    "compression": "^1.7.1",
     "connect-flash": "latest",
     "connect-mongo": "latest",
     "cookie-parser": "^1.4.3",
@@ -29,24 +28,19 @@
     "express-fileupload": "^1.1.1-alpha.3",
     "express-session": "^1.15.6",
     "forever": "latest",
+    "http": "0.0.0",
     "method-override": "^2.3.10",
     "moment": "^2.20.1",
     "mongoose": "^4.13.9",
     "morgan": "^1.9.0",
     "opencollective": "^1.0.3",
     "passport": "^0.3.2",
-    "passport-github": "latest",
-    "passport-github2": "^0.1.9",
-    "passport-google-oauth": "latest",
     "passport-http-bearer": "^1.0.1",
-    "passport-local": "latest",
-    "passport-twitter": "~1.0.2",
-    "pug": "^2.0.0-rc.4",
     "rand-token": "^0.4.0",
     "raven": "^2.1.2",
-    "serve-favicon": "^2.4.5",
+    "socket.io": "^2.2.0",
+    "socketio-auth": "^0.1.1",
     "underscore": "latest",
-    "view-helpers": "latest",
     "webpack-cli": "^2.1.3",
     "winston": "^2.4.0"
   },
@@ -59,11 +53,7 @@
     "mocha": "latest",
     "nodemon": "latest",
     "should": "latest",
-    "supertest": "^3.0.0"
-  },
-  "collective": {
-    "type": "opencollective",
-    "url": "https://opencollective.com/node-twitter",
-    "logo": "https://opencollective.com/node-twitter/logo.txt"
+    "supertest": "^3.0.0",
+    "tslint": "^5.14.0"
   }
 }
